fix talk screenshot too large

--- a/style.css
+++ b/style.css
@@ -671,8 +671,7 @@ section teaching
 
 .img-presentation {
     display: block;
-    max-width: 625px;
-    height: auto;
+    max-width: calc(min(100%, 625px));
     margin-top: 10px;
     border: 1px solid var(--lightgray);
 }
